--- a/week02/CMakeLists.txt
+++ b/week02/CMakeLists.txt
@@ -6,6 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("assignment02")
 
 # Add source to this project's executable.
-add_executable (assignment02 "assignment02.cpp" "infix.cpp" "infix.h" "stack.h")
+add_executable (assignment02 "assignment02.cpp" "infix.cpp" "infix.h" "stack_clean.h")
 
 # TODO: Add tests and install targets if needed.
